public/css/styles.css
body {
  font-family: 'Source Sans Pro', sans-serif;
  margin-top: 30px;
}

h1, h2 {
  font-family: 'Playfair Display', serif;
  text-transform: uppercase;
}

h1 {
  font-size: 70px;
}

p, li {
  font-size: 22px;
  line-height: 1.7;
  letter-spacing: 0.4px;
}

a {
  color: #96B5B4;
}

a:hover {
  color: #65737E;
}

img {
  width: 100%;
}

hr {
  margin: 0 0 40px;
}

blockquote {
  border-width: 0px 0px 0px 3px;
  border-style: solid;
  border-color: #4F5B66;
  padding-left: 15px;
}

blockquote p {
  color: #4F5B66;
  font-size: 17px;
}

code {
  background-color: #EFF1F5;
  color: #4F5B66;
  font-size: 15px;
}

pre code {
  background: none;
  color: #EFF1F5;
}

li {
  margin-left: 19px;
}

.heading .issue-number, .heading .issue-date {
  color: #666666;
  font-size: 16px;
  margin-top: 14px;
  margin-bottom: 10px;
}

.heading .issue-number a {
  color: inherit;
  text-decoration: none;
}

.author {
  font-size: 14px;
  color: #666666;
}

.author a {
  color: inherit;
  text-decoration: none;
}

.copyright {
  font-size: 12px;
  margin-top: 100px;
  text-align: center;
}

/* Mobile */

@media (max-width: 400px) {
  h1 {
    font-size: 48px;
  }
}

